[ENH] - removed loading bar on the bottom of textarea -grey border-bottom added to all fields within a form element, on focus state border-color becomes accent_color -label removed from forms on focus state to avoid overlapping when typing, except for input[type="checkbox"]

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4,7 +4,7 @@ Theme URI:      https://themeisle.com/themes/fagri/
 Author:         ThemeIsle
 Author URI:     https://themeisle.com
 Description:    Fagri is a responsive WordPress theme, built to fit all kinds of businesses. Its multipurpose design is great for small businesses, startups, corporate businesses, freelancers, portfolios, WooCommerce, creative agencies, or niche websites (medical, restaurants, sports, fashion). Fagri was created on top of Now UI Kit and displays an elegant one-page layout, complemented by the smooth parallax effect. The theme comes with a clean look, but it also provides subtle hover animations. Moreover, Fagri offers Sendinblue newsletter integration, a flexible interface via Live Customizer, a widgetized footer, full compatibility with Elementor and Beaver Builder, a full-width featured slider, and even more functionality based on the latest WordPress trends. Last but not least, the theme is lightweight and SEO-friendly.
-Version:        1.0.2
+Version:        1.0.4
 License:        GNU General Public License v2 or later
 License URI:    http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:    fagri
@@ -518,6 +518,32 @@ input[type="submit"]:hover {
 .hestia-contact .pirate_forms_wrap .contact_subject_wrap .form-group::before {
   top: 17px;
   right: 10px;
+}
+
+/*--------------------------------------------------------------
+## Forms
+--------------------------------------------------------------*/
+/* Remove label while typing */
+.form-group.is-focused label {
+  display: none;
+}
+
+/* Keep the label for checkbox fields */
+.form-group.is-focused input[type="checkbox"].form-control ~ label {
+  display: inline !important;
+}
+
+/* Remove bottom loading bar from forms */
+.form-group .form-control,
+.form-group.is-focused .form-control {
+  background-image: none !important;
+  border-bottom: 1px solid #E3E3E3;
+}
+
+/* Add border bottom which will be colored based on accent_color */
+.form-group textarea.form-control {
+  background-image: none !important;
+  border-bottom: 1px solid #E3E3E3;
 }
 
 /*--------------------------------------------------------------
